--- a/xiushang-boot-example/example-admin/src/main/resources/application-stg.yml
+++ b/xiushang-boot-example/example-admin/src/main/resources/application-stg.yml
@@ -43,7 +43,11 @@ spring:
         max-idle: 8 # 连接池中的最大空闲连接
         min-idle: 0 # 连接池中的最小空闲连接
     timeout: 3000ms # 连接超时时间（毫秒
-
+  # 关闭spring data 的redis仓库即可
+  data:
+    redis:
+      repositories:
+        enabled: false
 # 文件上传目录
 file:
   temppath: /data/images
