--- a/xiushang-boot-example/example-job/src/main/resources/application-stg.yml
+++ b/xiushang-boot-example/example-job/src/main/resources/application-stg.yml
@@ -46,6 +46,11 @@ spring:
         max-idle: 8 # 连接池中的最大空闲连接
         min-idle: 0 # 连接池中的最小空闲连接
     timeout: 3000ms # 连接超时时间（毫秒
+  # 关闭spring data 的redis仓库即可
+  data:
+    redis:
+      repositories:
+        enabled: false
 file:
   #文件上传目录 绝对路径 末尾请加 /
   #path: D:/files/ #windows
