--- a/xs-common/pom.xml
+++ b/xs-common/pom.xml
@@ -21,6 +21,7 @@
         <module>common-pay</module>
         <module>common-redis</module>
         <module>common-rocketmq</module>
+        <module>common-sms</module>
         <module>common-solr</module>
         <module>common-validation</module>
         <module>common-web</module>
