--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
 
-        <spring.version>5.1.6.RELEASE</spring.version>
+        <spring.version>5.2.7.RELEASE</spring.version>
         <hibernate.version>5.3.15.Final</hibernate.version>
         <poi.version>3.10-FINAL</poi.version>
         <querydsl.version>5.0.0</querydsl.version>
@@ -267,6 +267,11 @@
             <dependency>
                 <groupId>com.github.shijingsh</groupId>
                 <artifactId>common-dubbo</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.shijingsh</groupId>
+                <artifactId>common-dubbo-nacos</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
