--- a/pom.xml
+++ b/pom.xml
@@ -73,8 +73,8 @@
         <commons-pool2.version>2.10.0</commons-pool2.version>
         <druid.version>1.2.6</druid.version>
         <knife4j.version>3.0.5</knife4j.version>
-        <elasticsearch.version>7.10.1</elasticsearch.version>
         <knife4j.annotations.version>1.5.22</knife4j.annotations.version>
+        <elasticsearch.version>7.10.1</elasticsearch.version>
         <hutool.version>5.7.17</hutool.version>
         <dubbo.version>3.0.10</dubbo.version>
         <zookeeper.version>3.0.10</zookeeper.version>
@@ -319,6 +319,19 @@
                 <artifactId>common-web</artifactId>
                 <version>${project.version}</version>
             </dependency>
+
+            <!-- dubbo 框架 -->
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo</artifactId>
+                <version>${dubbo.version}</version>
+            </dependency>
+            <!-- knife4j 框架 -->
+            <dependency>
+                <groupId>com.github.shijingsh</groupId>
+                <artifactId>knife4j-spring-boot-starter</artifactId>
+                <version>${knife4j.version}</version>
+            </dependency>
             <!-- Apache Log4j2 远程代码执行漏洞 -->
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
@@ -362,7 +375,6 @@
         <dependency>
             <groupId>com.github.shijingsh</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
-            <version>${knife4j.version}</version>
             <exclusions>
                 <!-- 排除版本冲突的swagger-annotations -->
                 <exclusion>
