--- a/xs-job/pom.xml
+++ b/xs-job/pom.xml
@@ -40,6 +40,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>5.3.22</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
