--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
         <knife4j.version>3.1.0</knife4j.version>
         <knife4j.annotations.version>1.5.22</knife4j.annotations.version>
         <elasticsearch.version>7.10.1</elasticsearch.version>
+        <solr.version>8.5.1</solr.version>
         <hutool.version>5.7.17</hutool.version>
         <dubbo.version>3.0.10</dubbo.version>
         <zookeeper.version>3.0.10</zookeeper.version>
@@ -85,6 +86,14 @@
         <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
         <maven-compiler.version>3.8.1</maven-compiler.version>
         <mysql.version>8.0.19</mysql.version>
+
+        <slf4j.version>1.7.25</slf4j.version>
+        <jackson.version>2.11.0</jackson.version>
+        <fastjson.version>1.2.78</fastjson.version>
+        <log4j.version>2.17.0</log4j.version>
+        <swagger2.version>1.5.22</swagger2.version>
+        <swagger3.version>2.1.2</swagger3.version>
+        <httpclient.version>4.5.12</httpclient.version>
     </properties>
 
     <build>
@@ -392,7 +401,7 @@
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-commons</artifactId>
-                <version>2.7.2</version>
+                <version>${spring.boot.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -443,6 +452,23 @@
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid.version}</version>
             </dependency>
+            <!-- solr  -->
+            <dependency>
+                <groupId>org.apache.solr</groupId>
+                <artifactId>solr-solrj</artifactId>
+                <version>${solr.version}</version>
+            </dependency>
+            <!-- httpclient  -->
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${httpclient.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpmime</artifactId>
+                <version>${httpclient.version}</version>
+            </dependency>
             <!-- knife4j 框架 -->
             <dependency>
                 <groupId>com.github.shijingsh</groupId>
@@ -454,22 +480,65 @@
                 <artifactId>swagger-annotations</artifactId>
                 <version>${knife4j.annotations.version}</version>
             </dependency>
+
             <dependency>
-                <groupId>org.apache.httpcomponents</groupId>
-                <artifactId>httpclient</artifactId>
-                <version>4.5.12</version>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-models</artifactId>
+                <version>${swagger2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-core</artifactId>
+                <version>${swagger2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-annotations</artifactId>
+                <version>${swagger2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger.core.v3</groupId>
+                <artifactId>swagger-annotations</artifactId>
+                <version>${swagger3.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger.core.v3</groupId>
+                <artifactId>swagger-core</artifactId>
+                <version>${swagger3.version}</version>
+            </dependency>
+
+            <!--  jackson -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <artifactId>jackson-annotations</artifactId>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <version>${jackson.version}</version>
             </dependency>
             <!-- Apache Log4j2 远程代码执行漏洞 -->
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-api</artifactId>
-                <version>2.17.0</version>
+                <version>${log4j.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
-                <version>2.17.0</version>
+                <version>${log4j.version}</version>
             </dependency>
 
         </dependencies>
@@ -495,7 +564,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.78</version>
+            <version>${fastjson.version}</version>
         </dependency>
 
         <!-- knife4j 接口文档  -->
