--- a/xs-common/common-dubbo/pom.xml
+++ b/xs-common/common-dubbo/pom.xml
@@ -27,6 +27,12 @@
         <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.yaml</groupId>
+                    <artifactId>snakeyaml</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- dubbo的zookeeper依赖 -->
