--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
 
-        <hibernate.version>5.3.15.Final</hibernate.version>
+        <hibernate.version>5.4.32.Final</hibernate.version>
         <poi.version>3.10-FINAL</poi.version>
         <querydsl.version>5.0.0</querydsl.version>
 
@@ -92,6 +92,8 @@
         <jackson.version>2.11.0</jackson.version>
         <fastjson.version>1.2.78</fastjson.version>
         <log4j.version>2.17.0</log4j.version>
+        <guava.version>30.1.1-jre</guava.version>
+
         <swagger2.version>1.5.22</swagger2.version>
         <swagger3.version>2.1.2</swagger3.version>
         <httpclient.version>4.5.12</httpclient.version>
@@ -529,6 +531,13 @@
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <version>${jackson.version}</version>
             </dependency>
+
+            <!-- guava依赖 -->
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
             <!-- Apache Log4j2 远程代码执行漏洞 -->
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
@@ -585,6 +594,14 @@
                 <exclusion>
                     <groupId>net.bytebuddy</groupId>
                     <artifactId>byte-buddy</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.fasterxml</groupId>
+                    <artifactId>classmate</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
