--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,9 @@
         <maven-compiler.version>3.8.1</maven-compiler.version>
         <mysql.version>8.0.19</mysql.version>
 
+        <commons.lang3.version>3.12.0</commons.lang3.version>
+        <commons.beanutils.version>1.9.4</commons.beanutils.version>
+
         <slf4j.version>1.7.25</slf4j.version>
         <jackson.version>2.11.0</jackson.version>
         <fastjson.version>1.2.78</fastjson.version>
