--- a/xs-common/common-redis/pom.xml
+++ b/xs-common/common-redis/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>commons-pool2</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
 
