--- a/xs-common/common-sms/pom.xml
+++ b/xs-common/common-sms/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>common-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
