--- a/xs-common/common-redis/pom.xml
+++ b/xs-common/common-redis/pom.xml
@@ -23,6 +23,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.projectreactor</groupId>
+                    <artifactId>reactor-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!--spring boot 集成redis所需common-pool2-->
         <dependency>
