--- a/xs-common/common-rocketmq/pom.xml
+++ b/xs-common/common-rocketmq/pom.xml
@@ -23,6 +23,12 @@
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-client</artifactId>
             <version>4.4.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.alibaba</groupId>
+                    <artifactId>fastjson</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
     </dependencies>
