--- a/xs-common/common-core/pom.xml
+++ b/xs-common/common-core/pom.xml
@@ -27,6 +27,16 @@
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-core</artifactId>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.code.findbugs</groupId>
+                    <artifactId>jsr305</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
