--- a/xs-common/common-dubbo-nacos/pom.xml
+++ b/xs-common/common-dubbo-nacos/pom.xml
@@ -57,6 +57,10 @@
                     <groupId>org.javassist</groupId>
                     <artifactId>javassist</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>commons-io</groupId>
+                    <artifactId>commons-io</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
