knife4j 自定义底部不显示问题

--- a/xiushang-boot-example/example-admin/src/main/resources/application.yml
+++ b/xiushang-boot-example/example-admin/src/main/resources/application.yml
@@ -61,7 +61,8 @@ spring:
 knife4j:
   enable: true
   setting:
-    enableFooter: true
+    language: zh-CN
+    enableFooter: false
     enableFooterCustom: true
     footerCustomContent: Apache License 2.0 | Copyright ©️ 2021 秀上
 
